tests/good/misc/print-quote.pas
program PrintQuote;

begin
    WriteLn('"Hello, world!"')
end.
