tests/bad/bad-char-lit.pas
program BadCharLit;

begin
    WriteLn(Char(''))
end.
